[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]

[node name="Main" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
current = true

[node name="Background" type="TextureRect" parent="."]
visible = false
margin_left = -21.0
margin_top = -21.0
margin_right = 1052.0
margin_bottom = 607.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnContainer" type="Spatial" parent="."]

[node name="Position3D" type="Position3D" parent="SpawnContainer"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.409764, 0, -6 )

[node name="Position3D3" type="Position3D" parent="SpawnContainer"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.409764, -0.381504, -6 )

[node name="Position3D4" type="Position3D" parent="SpawnContainer"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.367375, -0.381504, -6 )

[node name="Position3D5" type="Position3D" parent="SpawnContainer"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.367375, -0.0423894, -6 )

[node name="Position3D6" type="Position3D" parent="SpawnContainer"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.367375, 0.292016, -6 )

[node name="Position3D2" type="Position3D" parent="SpawnContainer"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.409764, 0.447443, -6 )

[node name="EnemyContainer" type="Spatial" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
